--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,3 @@
-.btn-main {
-  padding: 1.3rem 2.9rem;
-  border-radius: 4rem;
-  text-align: center;
-  display: inline-block;
-}
-
-::selection {
-  background-color: #FF7D01;
-  color: #fff;
-}
-
 .header .navigation {
   position: fixed;
   top: 0;
@@ -69,17 +57,19 @@
   color: #fff;
   background: linear-gradient(103.38deg, #f67102 5.1%, #f4a91e 86.29%);
 }
+.header .navigation .container .menu-bar {
+  font-size: 3rem;
+  cursor: pointer;
+}
+.header .navigation .container .menu-bar:hover {
+  color: #FF7D01;
+}
 .header .navigation.active {
   padding: 2rem 0;
+  box-shadow: 0 2.4rem 10rem rgba(94, 122, 148, 0.1);
 }
 .header .header-main {
   padding: 10rem 0;
-}
-.header .header-main .container .row .col-lg-5 .caption {
-  letter-spacing: 0.185em;
-  color: #FF7D01;
-  font-size: 1.3rem;
-  font-weight: 500;
 }
 .header .header-main .container .row .col-lg-5 .heading-content {
   font-weight: 700;
@@ -87,8 +77,13 @@
   line-height: 5.6rem;
   color: #051441;
 }
+@media (max-width: 576px) {
+  .header .header-main .container .row .col-lg-5 .heading-content {
+    font-size: 3.5rem;
+    line-height: 1;
+  }
+}
 .header .header-main .container .row .col-lg-5 .subtitle {
-  color: #5D677E;
   margin-bottom: 5rem;
 }
 .header .header-main .container .row .col-lg-5 .actions-content {
@@ -108,6 +103,440 @@
 }
 .header .header-main .container .row .col-lg-5 .actions-content .watch .watch-video {
   color: #051441;
+}
+
+.footer {
+  background-color: #052347;
+}
+.footer .container {
+  padding: 9rem 0 4rem;
+  border-bottom: 0.1rem solid #5D677E;
+}
+.footer .container .row {
+  gap: 3rem 0;
+}
+.footer .container .row .footer-heading {
+  color: #D9E1F0;
+  font-weight: 600;
+  font-size: 1.8rem;
+}
+.footer .container .row .footer-menu {
+  padding: 2rem 0;
+  gap: 1.5rem 0;
+}
+.footer .container .row .footer-menu .menu-item {
+  color: #AFACCD;
+  font-size: 1.4rem;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+.footer .container .row .footer-menu .menu-item a {
+  color: #AFACCD;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+.footer .container .row .footer-menu .menu-item:hover a {
+  color: #F4F7FF;
+}
+.footer .container .row .social-link {
+  gap: 0 1rem;
+}
+@media (max-width: 768px) {
+  .footer .container {
+    padding: 9rem 3rem;
+  }
+}
+.footer .copyright {
+  color: #AFACCD;
+  padding: 3rem 0;
+}
+
+.btn-main {
+  padding: 1.3rem 2.9rem;
+  border-radius: 4rem;
+  text-align: center;
+  display: inline-block;
+}
+
+::selection {
+  background-color: #FF7D01;
+  color: #fff;
+}
+
+.caption {
+  letter-spacing: 0.185em;
+  color: #FF7D01;
+  font-size: 1.3rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.subtitle {
+  color: #5D677E;
+}
+
+.heading-text-bold {
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 5rem;
+  padding: 2.5rem 0;
+  max-width: 47rem;
+  width: 100%;
+  margin: 0 auto;
+  color: #051441;
+}
+@media (max-width: 576px) {
+  .heading-text-bold {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
+
+.card-heading {
+  font-weight: 600;
+  font-size: 2.1rem;
+  line-height: 3.2rem;
+  color: #051441;
+}
+
+.btn-bgr {
+  background: linear-gradient(103.38deg, #f67102 5.1%, #f4a91e 86.29%);
+  color: #fff;
+  margin-top: 2.5rem;
+}
+.btn-bgr:hover {
+  color: #fff;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999998;
+}
+.overlay.active {
+  display: block;
+}
+
+.menu-mobile {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  background-color: #fff;
+  z-index: 99999999;
+  width: 70%;
+  padding: 12rem 3rem 2rem;
+  gap: 3rem 0;
+  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  pointer-events: none;
+  opacity: 0;
+}
+.menu-mobile .close {
+  position: absolute;
+  top: 5rem;
+  right: 3rem;
+  font-size: 3.5rem;
+  cursor: pointer;
+}
+.menu-mobile .close:hover {
+  color: #FF7D01;
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+}
+.menu-mobile .menu {
+  gap: 3rem 0;
+}
+.menu-mobile .menu-item {
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  text-align: center;
+}
+.menu-mobile .menu-item:hover a, .menu-mobile .menu-item.active a {
+  color: #FF7D01;
+}
+.menu-mobile .menu-item a {
+  color: #635F85;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  width: 100%;
+  display: block;
+}
+.menu-mobile .actions {
+  gap: 2rem 0;
+}
+.menu-mobile .actions .login {
+  border: 0.2rem solid #E7E7E7;
+  color: #FF7D01;
+}
+.menu-mobile .actions .sign-up {
+  color: #fff;
+  background: linear-gradient(103.38deg, #f67102 5.1%, #f4a91e 86.29%);
+}
+.menu-mobile.active {
+  transform: translateX(0);
+  -webkit-transform: translateX(0);
+  pointer-events: all;
+  opacity: 1;
+}
+
+.back-to-top {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 2rem;
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  font-size: 2.4rem;
+  background-color: #fff;
+  cursor: pointer;
+  opacity: 0;
+  box-shadow: 0 2.4rem 6rem rgba(94, 122, 148, 0.8);
+}
+.back-to-top:hover .icon-arrow {
+  margin-top: -0.5rem;
+  color: #FF7D01;
+}
+.back-to-top.active {
+  opacity: 1;
+}
+
+.brand {
+  background-color: #F4F7FF;
+  padding: 7rem 0;
+}
+.brand .container {
+  gap: 0 5rem;
+}
+@media (max-width: 768px) {
+  .brand {
+    padding: 3rem 0;
+  }
+  .brand .container {
+    gap: 0 2rem;
+  }
+}
+@media (max-width: 567px) {
+  .brand .container {
+    gap: 0 1rem;
+  }
+}
+
+.services {
+  padding: 14rem 0 0;
+}
+.services .services-details {
+  margin-top: 7rem;
+}
+.services .services-details .row {
+  gap: 3rem 0;
+}
+.services .services-details .row .services-item {
+  border-radius: 1.3rem;
+  border: 0.2rem solid #E7E7E7;
+  padding: 4rem 4.5rem 8rem;
+  cursor: pointer;
+}
+.services .services-details .row .services-item .services-icon {
+  width: 6.7rem;
+  height: 6.7rem;
+  border-radius: 50%;
+  margin: 0 auto;
+  background-color: #F4F7FF;
+}
+.services .services-details .row .services-item .services-icon img {
+  max-width: 100%;
+  width: unset;
+}
+.services .services-details .row .services-item.active, .services .services-details .row .services-item:hover {
+  box-shadow: 0 2.4rem 6rem rgba(94, 122, 148, 0.1);
+  border-color: transparent;
+}
+.services .services-details .row .services-item.active .services-icon, .services .services-details .row .services-item:hover .services-icon {
+  background-color: #5A73E5;
+}
+.services .services-details .row .services-item.active .services-icon:not(:nth-child(2)) img, .services .services-details .row .services-item:hover .services-icon:not(:nth-child(2)) img {
+  filter: brightness(10);
+}
+
+.top-marketing {
+  padding: 3rem 0;
+}
+.top-marketing .container .row-top {
+  gap: 4rem 8rem;
+}
+.top-marketing .container .row-top .content-left {
+  max-width: 55rem;
+  width: 100%;
+}
+@media (max-width: 991px) {
+  .top-marketing .container .row-top .content-left {
+    max-width: 100%;
+  }
+}
+.top-marketing .container .row-top .content-right {
+  flex: 1;
+}
+
+.goal {
+  background-color: #F4F7FF;
+  padding: 7rem 0;
+}
+
+.feedback {
+  padding: 10rem 0;
+}
+.feedback .container .row {
+  gap: 3rem 0;
+}
+.feedback .container .row .feedback-card {
+  gap: 3rem 0;
+  position: relative;
+}
+.feedback .container .row .feedback-card .bgr {
+  position: absolute;
+  inset: 0;
+}
+.feedback .container .row .feedback-card .review-card {
+  padding: 2.6rem;
+  background-color: #fff;
+  box-shadow: 0 0.8rem 5.5rem rgba(155, 162, 173, 0.17);
+  border-radius: 1rem;
+}
+.feedback .container .row .feedback-card .review-card-heading .card-avt {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+}
+.feedback .container .row .feedback-card .review-card-heading .card-rating img {
+  width: 1.4rem;
+  height: 1.4rem;
+}
+.feedback .container .row .feedback-card .review-card-heading .card-rating span {
+  font-size: 1.2rem;
+  color: #051441;
+  font-weight: 600;
+}
+.feedback .container .row .feedback-card .review-card-body {
+  margin-top: 1rem;
+}
+.feedback .container .row .feedback-card .review-card-body .card-name {
+  font-size: 1.3rem;
+  color: #051441;
+  font-weight: 600;
+}
+.feedback .container .row .feedback-card .review-card-body .card-role {
+  font-size: 0.9rem;
+  color: #949CB7;
+  font-weight: 600;
+}
+.feedback .container .row .feedback-card .review-card-body .card-feedback-content {
+  color: #79899D;
+  font-size: 1.1rem;
+}
+.feedback .container .row .feedback-card .review-card-item {
+  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+}
+@media (max-width: 991px) {
+  .feedback .container .row .feedback-card .review-card-item {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+  }
+}
+.feedback .container .row .feedback-details .feedback-analytics {
+  margin-top: 2.5rem;
+  gap: 0 1rem;
+}
+.feedback .container .row .feedback-details .feedback-analytics .total-feedback {
+  font-weight: 600;
+  font-size: 2.5rem;
+  color: #F4A11A;
+}
+.feedback .container .row .feedback-details .feedback-analytics span:last-child {
+  color: #949CB7;
+}
+
+.blog {
+  padding: 5rem 0;
+}
+.blog .container .row-card {
+  margin-top: 7rem;
+  gap: 3rem 0;
+}
+.blog .container .row-card .col-lg-4 {
+  display: flex;
+  flex-direction: column;
+}
+.blog .container .row-card .col-lg-4 .blog-card {
+  border-radius: 1.7rem;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  overflow: hidden;
+  flex: 1;
+}
+.blog .container .row-card .col-lg-4 .blog-card-thumb {
+  height: 32rem;
+}
+.blog .container .row-card .col-lg-4 .blog-card-thumb img {
+  height: 100%;
+  object-fit: cover;
+}
+.blog .container .row-card .col-lg-4 .blog-card-body {
+  padding: 0 3rem 3rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.blog .container .row-card .col-lg-4 .blog-card-body .blog-card-desc {
+  margin-top: auto;
+}
+.blog .container .row-card .col-lg-4 .blog-card:hover {
+  box-shadow: 0 4.6rem 10rem -3.1rem rgba(0, 0, 0, 0.1);
+}
+.blog .container .row-card .col-lg-4 .blog-card:hover .blog-card-heading {
+  color: #FF7D01;
+}
+
+.subscribes {
+  margin: 10rem 0;
+}
+.subscribes .container {
+  background-color: #F4F7FF;
+  padding: 7rem 1.5rem;
+  border-radius: 6.7rem;
+}
+.subscribes .container .row {
+  gap: 3rem 0;
+}
+.subscribes .container .row .form-group {
+  position: relative;
+}
+.subscribes .container .row .form-group input {
+  padding: 1.5rem 15rem 1.5rem 2rem;
+  background-color: #fff;
+  border-radius: 2.6rem;
+  color: #635F85;
+}
+.subscribes .container .row .form-group input::placeholder {
+  color: #635F85;
+}
+.subscribes .container .row .form-group button {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+@media (max-width: 576px) {
+  .subscribes .container {
+    padding: 4rem 1.5rem;
+  }
+  .subscribes .container .row .form-group button {
+    position: relative;
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
