--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -2,3 +2,263 @@
 @import './_mixin';
 @import './_header';
 @import './footer';
+@import './global';
+// brand
+.brand {
+    background-color: $color-1;
+    padding: 7rem 0;
+    .container {
+        gap: 0 5rem;
+    }
+    @media (max-width: 768px) {
+        & {
+            padding: 3rem 0;
+            .container {
+                gap: 0 2rem;
+            }
+        }
+    }
+    @media (max-width: 567px) {
+        & {
+            .container {
+                gap: 0 1rem;
+            }
+        }
+    }
+}
+
+// services
+.services {
+    padding: 14rem 0 0;
+    .services-details {
+        margin-top: 7rem;
+        .row {
+            gap: 3rem 0;
+            .services-item {
+                border-radius: 1.3rem;
+                border: 0.2rem solid $border;
+                padding: 4rem 4.5rem 8rem;
+                cursor: pointer;
+                .services-icon {
+                    width: 6.7rem;
+                    height: 6.7rem;
+                    border-radius: 50%;
+                    margin: 0 auto;
+                    background-color: $color-1;
+                    img {
+                        max-width: 100%;
+                        width: unset;
+                    }
+                }
+                &.active,
+                &:hover {
+                    box-shadow: 0 2.4rem 6rem rgb(94 122 148 / 10%);
+                    border-color: transparent;
+                    .services-icon {
+                        background-color: $color-2;
+                    }
+                    .services-icon:not(:nth-child(2)) {
+                        img {
+                            filter: brightness(10);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// top marketing
+.top-marketing {
+    padding: 3rem 0;
+    .container {
+        .row-top {
+            gap: 4rem 8rem;
+            .content-left {
+                max-width: 55rem;
+                width: 100%;
+                @media (max-width: 991px) {
+                    max-width: 100%;
+                }
+            }
+            .content-right {
+                flex: 1;
+            }
+        }
+    }
+}
+
+// mission & goal
+.goal {
+    background-color: $color-1;
+    padding: 7rem 0;
+}
+
+// feedback
+.feedback {
+    padding: 10rem 0;
+    .container {
+        .row {
+            gap: 3rem 0;
+            .feedback-card {
+                gap: 3rem 0;
+                position: relative;
+                .bgr {
+                    position: absolute;
+                    inset: 0;
+                }
+                .review-card {
+                    padding: 2.6rem;
+                    background-color: $white;
+                    box-shadow: 0 0.8rem 5.5rem rgba(155, 162, 173, 0.17);
+                    border-radius: 1rem;
+                    &-heading {
+                        .card-avt {
+                            width: 5rem;
+                            height: 5rem;
+                            border-radius: 50%;
+                        }
+                        .card-rating {
+                            img {
+                                width: 1.4rem;
+                                height: 1.4rem;
+                            }
+                            span {
+                                font-size: 1.2rem;
+                                color: $bold;
+                                @include text-bold;
+                            }
+                        }
+                    }
+                    &-body {
+                        margin-top: 1rem;
+                        .card-name {
+                            font-size: 1.3rem;
+                            color: $bold;
+                            @include text-bold;
+                        }
+                        .card-role {
+                            font-size: 0.9rem;
+                            color: $card-color1;
+                            @include text-bold;
+                        }
+                        .card-feedback-content {
+                            color: $card-color2;
+                            font-size: 1.1rem;
+                        }
+                    }
+                }
+                .review-card-item {
+                    transform: translateY(50%);
+                    -webkit-transform: translateY(50%);
+                    @media (max-width: 991px) {
+                        transform: translateY(0);
+                        -webkit-transform: translateY(0);
+                    }
+                }
+            }
+            .feedback-details {
+                .feedback-analytics {
+                    margin-top: 2.5rem;
+                    gap: 0 1rem;
+                    .total-feedback {
+                        @include text-bold;
+                        font-size: 2.5rem;
+                        color: #F4A11A;
+                    }
+                    span:last-child {
+                        color: $card-color1;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// blogs
+.blog {
+    padding: 5rem 0;
+    .container {
+        .row-card {
+            margin-top: 7rem;
+            gap: 3rem 0;
+            .col-lg-4 {
+                display: flex;
+                flex-direction: column;
+                .blog-card {
+                    border-radius: 1.7rem;
+                    display: flex;
+                    flex-direction: column;
+                    cursor: pointer;
+                    overflow: hidden;
+                    flex: 1;
+                    &-thumb {
+                        height: 32rem;
+                        img {
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+                    &-body {
+                        padding: 0 3rem 3rem;
+                        flex: 1;
+                        display: flex;
+                        flex-direction: column;
+                        .blog-card-desc {
+                            margin-top: auto;
+                        }
+                    }
+                    &:hover {
+                        box-shadow: 0 4.6rem 10rem -3.1rem rgba(0, 0, 0, 0.1);
+                        .blog-card-heading {
+                            color: $primary;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// subscribes
+.subscribes {
+    margin: 10rem 0;
+    .container {
+        background-color: $color-1;
+        padding: 7rem 1.5rem;
+        border-radius: 6.7rem;
+        .row {
+            gap: 3rem 0;
+            .form-group {
+                position: relative;
+                input {
+                    padding: 1.5rem 15rem 1.5rem 2rem;
+                    background-color: $white;
+                    border-radius: 2.6rem;
+                    color: $color-menu;
+                    &::placeholder {
+                        color: $color-menu;
+                    }
+                }
+                button {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                }
+            }
+        }
+        @media (max-width:576px) {
+            & {
+                padding: 4rem 1.5rem;
+                .row {
+                    .form-group {
+                        button {
+                            position: relative;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
