--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -173,6 +173,11 @@
             }
         }
     }
+    @media (max-width:768px) {
+        & {
+            padding: 5rem 0 0;
+        }
+    }
 }
 
 // blogs
@@ -259,6 +264,11 @@
                     }
                 }
             }
+        }
+    }
+    @media (max-width:768px) {
+        & {
+            margin: 0 0 5rem;
         }
     }
 }
